@@ -7,6 +7,7 @@
 	+ Set version to 3.5
 	+ Allow openchange working with old ldb/tdb backends (upgrade from 3.3)
 	+ Allow ActiveSync setup if z-push or sogo-activesync are installed
+	+ Remove Migration menu
 3.4.1
 	+ Generate master password for IMAP access
 3.4
